<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>client</name>
  <version>0.0.0</version>
  <description>My client for ROS2</description>
  <maintainer email="danieljeswin@gmail.com">Daniel Jeswin</maintainer>
  <license>MIT License</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>my_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>